# laszip_playground

./: CMakeLists.txt  readme.md
libs/laszip/src/: arithmeticmodel.cpp
resources/pointclouds/: bunny_small.laz
src/: ans.cu  ans.cuh  main.cpp
